--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
+  },
+  "dependencies": {
+    "luxon": "^3.1.0",
+    "probability-distributions": "^0.9.1"
   }
 }
