Getting Docker to work again after rename

--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM php:8.1.28-apache
-RUN mkdir /usr/local/shinsa-build
-COPY ./deploy/docker/install.sh /usr/local/shinsa-build/install.sh
-RUN sh /usr/local/shinsa-build/install.sh
-WORKDIR /usr/local/shinsa
+RUN mkdir /usr/local/simsa-build
+COPY ./deploy/docker/install.sh /usr/local/simsa-build/install.sh
+RUN sh /usr/local/simsa-build/install.sh
+WORKDIR /usr/local/simsa
 EXPOSE 8321
 EXPOSE 3321
-CMD perl /usr/local/shinsa/bin/shinsa.pl
+#CMD perl /usr/local/simsa/bin/simsa
